# mcp-server-conceal

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
crates/mcp-server-conceal/: Cargo.toml
crates/mcp-server-conceal-core/: Cargo.toml
crates/mcp-server-conceal-core/src/: config.rs  detection.rs  faker.rs  integration_tests.rs  lib.rs  mapping.rs  ollama.rs  prompt_loader.rs  proxy.rs
crates/mcp-server-conceal-core/src/templates/: builtin_prompt.md
crates/mcp-server-conceal-core/tests/: integration.rs
crates/mcp-server-conceal/src/: main.rs
tests/python/: README.md  benchmark_analysis.py  comprehensive_test.py  conftest.py  quick_benchmark.py  test_model_configs.py  test_pseudo_anonymization.py
tests/python/test-servers/: echo_server.py  error_server.py
